# plumes

./: .flake8  .gitignore  .releaserc.json  Makefile  README.md  pyproject.toml  settings.toml
.github/workflows/: test.yml
examples/: ConanOBrien-tweets.json  SteveMartinToGo-friends.json  alyankovic-followers.json
plumes/: cli.py  config.py  settings.toml  utilities.py
tests/: conftest.py  test_cli.py  test_utilities.py
tests/resources/: test-tweets.json  test-users.json
