[tool.poetry]
name = "plumes"
version = "0.1.0"
description = "Simple Twitter CLI for day-to-day social media hygiene"
authors = ["Nicholas Nadeau <nicholas.nadeau@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
dynaconf = "^3.1.0"
tweepy = "^3.9.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
isort = "^5.4.2"
flake8 = "^3.8.3"
rope = "^0.17.0"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
